@@ -23,9 +23,8 @@ import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.metadata.ComposableIndexTemplate;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
-import org.elasticsearch.cluster.routing.allocation.decider.AllocationDeciders;
+import org.elasticsearch.cluster.routing.allocation.AllocationService;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
@@ -34,6 +33,7 @@ import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.env.NodeEnvironment;
 import org.elasticsearch.indices.ExecutorNames;
+import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.indices.SystemDataStreamDescriptor;
 import org.elasticsearch.indices.SystemIndexDescriptor;
 import org.elasticsearch.indices.SystemIndexDescriptor.Type;
@@ -51,21 +51,28 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.template.TemplateUtils;
+import org.elasticsearch.xpack.fleet.action.DeleteSecretAction;
 import org.elasticsearch.xpack.fleet.action.GetGlobalCheckpointsAction;
 import org.elasticsearch.xpack.fleet.action.GetGlobalCheckpointsShardAction;
+import org.elasticsearch.xpack.fleet.action.GetSecretAction;
+import org.elasticsearch.xpack.fleet.action.PostSecretAction;
+import org.elasticsearch.xpack.fleet.action.TransportDeleteSecretAction;
+import org.elasticsearch.xpack.fleet.action.TransportGetSecretAction;
+import org.elasticsearch.xpack.fleet.action.TransportPostSecretAction;
+import org.elasticsearch.xpack.fleet.rest.RestDeleteSecretsAction;
 import org.elasticsearch.xpack.fleet.rest.RestFleetMultiSearchAction;
 import org.elasticsearch.xpack.fleet.rest.RestFleetSearchAction;
 import org.elasticsearch.xpack.fleet.rest.RestGetGlobalCheckpointsAction;
+import org.elasticsearch.xpack.fleet.rest.RestGetSecretsAction;
+import org.elasticsearch.xpack.fleet.rest.RestPostSecretsAction;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.core.ClientHelper.FLEET_ORIGIN;
 
@@ -76,10 +83,21 @@ import static org.elasticsearch.xpack.core.ClientHelper.FLEET_ORIGIN;
  */
 public class Fleet extends Plugin implements SystemIndexPlugin {
 
+    public static final String FLEET_SECRETS_INDEX_NAME = ".fleet-secrets";
+
     private static final int CURRENT_INDEX_VERSION = 7;
     private static final String VERSION_KEY = "version";
     private static final String MAPPING_VERSION_VARIABLE = "fleet.version";
     private static final List<String> ALLOWED_PRODUCTS = List.of("kibana", "fleet");
+    private static final int FLEET_ACTIONS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_AGENTS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_ENROLLMENT_API_KEYS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_SECRETS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_POLICIES_MAPPINGS_VERSION = 1;
+    private static final int FLEET_POLICIES_LEADER_MAPPINGS_VERSION = 1;
+    private static final int FLEET_SERVERS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_ARTIFACTS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_ACTIONS_RESULTS_MAPPINGS_VERSION = 1;
 
     @Override
     public Collection<Object> createComponents(
@@ -95,7 +113,8 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         IndexNameExpressionResolver expressionResolver,
         Supplier<RepositoriesService> repositoriesServiceSupplier,
         Tracer tracer,
-        AllocationDeciders allocationDeciders
+        AllocationService allocationService,
+        IndicesService indicesService
     ) {
         FleetTemplateRegistry registry = new FleetTemplateRegistry(
             environment.settings(),
@@ -114,6 +133,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
             fleetActionsSystemIndexDescriptor(),
             fleetAgentsSystemIndexDescriptor(),
             fleetEnrollmentApiKeysSystemIndexDescriptor(),
+            fleetSecretsSystemIndexDescriptor(),
             fleetPoliciesSystemIndexDescriptor(),
             fleetPoliciesLeaderSystemIndexDescriptor(),
             fleetServersSystemIndexDescriptors(),
@@ -138,7 +158,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetActionsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-actions.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-actions.json", FLEET_ACTIONS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -156,7 +176,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetAgentsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-agents.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-agents.json", FLEET_AGENTS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -174,7 +194,10 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetEnrollmentApiKeysSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-enrollment-api-keys.json"), XContentType.JSON);
+        request.source(
+            loadTemplateSource("/fleet-enrollment-api-keys.json", FLEET_ENROLLMENT_API_KEYS_MAPPINGS_VERSION),
+            XContentType.JSON
+        );
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -190,9 +213,25 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
             .build();
     }
 
+    private SystemIndexDescriptor fleetSecretsSystemIndexDescriptor() {
+        PutIndexTemplateRequest request = new PutIndexTemplateRequest();
+        request.source(loadTemplateSource("/fleet-secrets.json", FLEET_SECRETS_MAPPINGS_VERSION), XContentType.JSON);
+        return SystemIndexDescriptor.builder()
+            .setType(Type.INTERNAL_MANAGED)
+            .setOrigin(FLEET_ORIGIN)
+            .setVersionMetaKey(VERSION_KEY)
+            .setMappings(request.mappings())
+            .setSettings(request.settings())
+            .setPrimaryIndex(FLEET_SECRETS_INDEX_NAME + "-" + CURRENT_INDEX_VERSION)
+            .setIndexPattern(FLEET_SECRETS_INDEX_NAME + "*")
+            .setAliasName(FLEET_SECRETS_INDEX_NAME)
+            .setDescription("Secret values managed by Fleet")
+            .build();
+    }
+
     private SystemIndexDescriptor fleetPoliciesSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-policies.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-policies.json", FLEET_POLICIES_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -210,7 +249,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetPoliciesLeaderSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-policies-leader.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-policies-leader.json", FLEET_POLICIES_LEADER_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -228,7 +267,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetServersSystemIndexDescriptors() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-servers.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-servers.json", FLEET_SERVERS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -246,7 +285,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetArtifactsSystemIndexDescriptors() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-artifacts.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-artifacts.json", FLEET_ARTIFACTS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -263,7 +302,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
     }
 
     private SystemDataStreamDescriptor fleetActionsResultsDescriptor() {
-        final String source = loadTemplateSource("/fleet-actions-results.json");
+        final String source = loadTemplateSource("/fleet-actions-results.json", FLEET_ACTIONS_RESULTS_MAPPINGS_VERSION);
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, source)) {
             ComposableIndexTemplate composableIndexTemplate = ComposableIndexTemplate.parse(parser);
             return new SystemDataStreamDescriptor(
@@ -286,10 +325,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         if (dataStreamDescriptors.isEmpty() == false) {
             try {
                 Request request = new Request(
-                    dataStreamDescriptors.stream()
-                        .map(SystemDataStreamDescriptor::getDataStreamName)
-                        .collect(Collectors.toList())
-                        .toArray(Strings.EMPTY_ARRAY)
+                    dataStreamDescriptors.stream().map(SystemDataStreamDescriptor::getDataStreamName).toArray(String[]::new)
                 );
                 EnumSet<Option> options = request.indicesOptions().options();
                 options.add(Option.IGNORE_UNAVAILABLE);
@@ -321,15 +357,23 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         }
     }
 
-    private String loadTemplateSource(String resource) {
-        return TemplateUtils.loadTemplate(resource, Version.CURRENT.toString(), MAPPING_VERSION_VARIABLE);
+    private String loadTemplateSource(String resource, int mappingsVersion) {
+        return TemplateUtils.loadTemplate(
+            resource,
+            Version.CURRENT.toString(),
+            MAPPING_VERSION_VARIABLE,
+            Map.of("fleet.managed.index.version", Integer.toString(mappingsVersion))
+        );
     }
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        return Arrays.asList(
+        return List.of(
             new ActionHandler<>(GetGlobalCheckpointsAction.INSTANCE, GetGlobalCheckpointsAction.TransportAction.class),
-            new ActionHandler<>(GetGlobalCheckpointsShardAction.INSTANCE, GetGlobalCheckpointsShardAction.TransportAction.class)
+            new ActionHandler<>(GetGlobalCheckpointsShardAction.INSTANCE, GetGlobalCheckpointsShardAction.TransportAction.class),
+            new ActionHandler<>(GetSecretAction.INSTANCE, TransportGetSecretAction.class),
+            new ActionHandler<>(PostSecretAction.INSTANCE, TransportPostSecretAction.class),
+            new ActionHandler<>(DeleteSecretAction.INSTANCE, TransportDeleteSecretAction.class)
         );
     }
 
@@ -343,10 +387,13 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         IndexNameExpressionResolver indexNameExpressionResolver,
         Supplier<DiscoveryNodes> nodesInCluster
     ) {
-        return Arrays.asList(
+        return List.of(
             new RestGetGlobalCheckpointsAction(),
             new RestFleetSearchAction(restController.getSearchUsageHolder()),
-            new RestFleetMultiSearchAction(settings, restController.getSearchUsageHolder())
+            new RestFleetMultiSearchAction(settings, restController.getSearchUsageHolder()),
+            new RestGetSecretsAction(),
+            new RestPostSecretsAction(),
+            new RestDeleteSecretsAction()
         );
     }
 }
